--- a/css/index.scss
+++ b/css/index.scss
@@ -15,8 +15,21 @@ iframe{
 }
 nav {
 	height: 25vh;
-	width: 100vw;
 
+}
+footer{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	width: 100%;
+	height: 10vh;
+	font-size: 2rem;
+	color: $colorPrincipal;
+	border-top: solid 1px $colorSecundario;
+	a{
+		color: $colorSecundario;
+	}
 }
 a {
 	color: $colorPrincipal;
@@ -26,32 +39,35 @@ hr {
 }
 .landingPage {
 	height: 70vh;
-	width: 100%;
+	width: 100vw;
 	display: flex;
 	flex-direction: column;
 	img {
-		margin-top: 3vh;
+		margin-top: 4vh;
 		width: 9vw;
-		padding-left: 5vw;
+		margin-left: 5vw;
 	}
 }
 .titulo {
+	h1{
 	font-weight: 600;
-	font-size: 6rem;
+	font-size: 5.5rem;
 	text-align: left;
-	padding-left: 5vw;
+	margin-left: 5vw;
 	color:$colorPrincipal;
+}
 }
 .titulos {
 	font-size: 4rem;
 	font-weight: 600;
-	padding-left: 5vw;
+	margin-left: 5vw;
 	color: $colorPrincipal;
+	margin-top: 4vh;
 }
 .subtitulo {
 	color: $colorSecundario;
 	text-align: left;
-	padding-left: 5vw;
+	margin-left: 5vw;
 	font-weight: lighter;
 }
 .redes{
@@ -70,7 +86,7 @@ hr {
 		color: $colorSecundario;
 		margin-bottom: 5vh;
 		padding-top: 1vh;
-		padding-left: 3vw;
+		margin-left: 3vw;
 	}
 }
 .trabajos {
@@ -78,7 +94,7 @@ hr {
 	display: flex;
 	flex-direction: column;
 	padding-bottom: 10vh;
-	padding-left: 5vw;
+	margin-left: 5vw;
 	margin-top: 5vh;
 }
 .trabajo {
@@ -106,14 +122,14 @@ hr {
 .sobremiTitulo {
 	font-size: 3rem;
 	font-weight: 600;
-	padding-left: 2vw;
+	margin-left: 2vw;
 	margin-bottom: 5vh;
 	margin-top: 5vh;
 	color: $colorPrincipal;
 }
 .item {
 	font-size: 1.4rem;
-	padding-left: 2vw;
+	margin-left: 2vw;
 	a {
 		color: $colorPrincipal;
 	}
@@ -147,22 +163,22 @@ hr {
 	.sobremiTitulo {
 		font-size: 3rem;
 		font-weight: 600;
-		padding-left: 2vw;
+		margin-left: 2vw;
 		margin-bottom: 5vh;
 		margin-top: 5vh;
 		text-decoration: dotted 1px $colorPrincipal;
 		font-size: 4.5rem;
 		font-weight: 600;
-		padding-left: 2vw;
+		margin-left: 2vw;
 		margin-bottom: 5vh;
 		margin-top: 5vh;
 		text-decoration: dotted 1px $colorPrincipal;
 	}
 	.item {
 		font-size: 1.4rem;
-		padding-left: 2vw;
+		margin-left: 2vw;
 		font-size: 2.4rem;
-		padding-left: 2vw;
+		margin-left: 2vw;
 		a {
 			color: $colorPrincipal;
 		}
@@ -186,7 +202,7 @@ hr {
 	.titulo {
 		width: 70vw;
 		font-size: 7rem;
-		padding-left: 12vw;
+		margin-left: 12vw;
 	}
 	.subtitulo {
 		font-size: 2.3rem;
@@ -200,8 +216,12 @@ hr {
 	}
 	.sobremi{
 		width: 50vw;
+		p{
+			width: 50%;
+		}
 	}
 	nav{
-		height: 10vh;
+		height: 0vh;
 	}
+}
 }
