--- a/css/index.scss
+++ b/css/index.scss
@@ -10,6 +10,9 @@ html {
 	margin: 0;
 	padding: 0;
 }
+* {
+	outline: 1px solid #f00 !important;
+  }
 iframe{
 	background-color: white;
 }
@@ -39,7 +42,7 @@ hr {
 }
 .landingPage {
 	height: 70vh;
-	width: 100vw;
+	width: 98vw;
 	display: flex;
 	flex-direction: column;
 	img {
